--- a/src/napari_caphid/napari.yaml
+++ b/src/napari_caphid/napari.yaml
@@ -11,15 +11,10 @@ contributions:
     - id: napari-caphid.write_single_image
       python_name: napari_caphid._writer:write_single_image
       title: Save image data with CAphid
-    - id: napari-caphid.make_qwidget
-      python_name: napari_caphid._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-caphid.make_magic_widget
-      python_name: napari_caphid._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-caphid.make_func_widget
-      python_name: napari_caphid._widget:example_function_widget
-      title: Make example function widget
+    - id: napari-caphid.make_process_func
+      python_name: napari_caphid._widget:process_func
+      title: Update table
+      
   readers:
     - command: napari-caphid.get_reader
       accepts_directories: false
@@ -32,10 +27,5 @@ contributions:
       layer_types: ['image']
       filename_extensions: ['.npy']
   widgets:
-    - command: napari-caphid.make_qwidget
-      display_name: Example QWidget
-    - command: napari-caphid.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-caphid.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+    - command: napari-caphid.make_process_func
+      display_name: Update table
