--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,11 @@ install_requires =
     numpy
     magicgui
     qtpy
+    opencv-python
+    numpy
+    tqdm
+    pandas
+    Pillow
 
 python_requires = >=3.8
 include_package_data = True
